--- a/src/main/webapp/lesson01/quiz10.html
+++ b/src/main/webapp/lesson01/quiz10.html
@@ -2,28 +2,24 @@
 <html>
 <head>
 <meta charset="UTF-8">
-<title>입사지원</title>
+<title>사용자정보확인</title>
 <!-- 부트스트렙 -->
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css" integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N" crossorigin="anonymous">
 <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-Fy6S3B9q64WdZWQUiU+q4/2Lc9npb8tCaSX9FK7E8HnRr0Jz8D6OP9dO5Vg3Q9ct" crossorigin="anonymous"></script>
 
-
 </head>
 <body>
 	<div class="container">
-		<h1>입사 지원</h1>
+		<h1>로그인</h1>
 		
-		<form method="post" action="/lesson01/quiz09">
-			<div class="form-group">
-				<input type="text" name="name" class="form-control" placeholder="이름을 입력하세요">
-			</div>
-			<div>
-				<label for="introduce">자기소개서</label>
-				<textarea name="introduce" id="introduce" class="form-control" rows="10"></textarea>
-			</div>
-			<input type="submit" class="btn btn-primary w-100 mt-3" value="지원">    
+		<form method="post" action="/lesson01/quiz10">
+			<input type="text" name="id" class="form-control col-3" placeholder="아이디를 입력하세요.">
+			<input type="password" name="password" class="form-control col-3 mt-1" placeholder="비밀번호를 입력하세요.">
+			<input type="submit" value="로그인" class="btn btn-primary mt-3">
 		</form>
+			
 	</div>
+
 </body>
 </html>
